--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="/home/karasu_lord_of_the_ravens/bootcamp/prework-study-guide/assets/bowtie-cat.png"/>
-
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -67,5 +67,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="assets/script.js"></script>
   </body>
 </html>
