add functions and for loops within our branch

--- a/index.html
+++ b/index.html
@@ -58,7 +58,15 @@
 
      <ul>
 
-       <li>Enter your javascript</li>
+       <li>A variable is a named container that allows us to store data in our code</li>
+
+       <li>Control flow is the order in which a computer executes code in a script</li>
+
+       <li>an Array is a variable that allows us to store a group of data </li>
+
+       <li>Type coercion is an implicit conversion of value from one data type to another </li>
+
+       <li>Type conversion is the implicit or expicit conversion of a value from one to another</li>
 
     </ul>
      </section>
