add readme restore

--- a/index.html
+++ b/index.html
@@ -58,14 +58,22 @@
 
      <ul>
 
-       <li>Enter your javascript</li>
+       <li>An array is a variable that holds a group of data</li>
+       <li>type coercion so when one data type is turned into another implicitly </li>
+       
 
     </ul>
      </section>
     </main>
 
     <footer>
+
       <p>I can code!</p>
+
     </footer>
+
+    <script src="./assets/script.js"></script>
+
   </body>
+
 </html>
