--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
-      <img src="/home/karasu_lord_of_the_ravens/bootcamp/prework-study-guide/assets/bowtie-cat.png"/>
+      <img src="assets\bowtie-cat.png">
 
     </header>
     <main>
